@@ -115,9 +115,8 @@ public class Crawl {
     injector.inject(crawlDb, rootUrlDir);
       
     for (int i = 0; i < depth; i++) {             // generate new segment
-      Path segment =
-        generator.generate(crawlDb, segments, -1,
-                                     topN, System.currentTimeMillis());
+      Path segment = generator.generate(crawlDb, segments, -1, topN, System
+          .currentTimeMillis(), false);
       fetcher.fetch(segment, threads);  // fetch it
       if (!Fetcher.isParsing(job)) {
         parseSegment.parse(segment);    // parse it, if needed
