@@ -87,7 +87,8 @@ public class TestFetcher extends TestCase {
 
     //generate
     Generator g=new Generator(conf);
-    Path generatedSegment=g.generate(crawldbPath, segmentsPath, 1, Long.MAX_VALUE, Long.MAX_VALUE);
+    Path generatedSegment = g.generate(crawldbPath, segmentsPath, 1,
+        Long.MAX_VALUE, Long.MAX_VALUE, false);
 
     long time=System.currentTimeMillis();
     //fetch
